FIX: handle warehouse id update

--- a/site/templates/twig/code-tables/mso/rgasc/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/js/classes/Form.js.twig
@@ -28,6 +28,7 @@ class RgascForm {
 
 			var validator = this.inputs.form.validate();
 			validator.element('#' + this.inputs.code.attr('id'));
+			this.inputs.whseid.change();
 			return true;
 		}
 		this.inputs.form.attr('data-code', '');
