--- a/site/templates/twig/code-tables/mso/rgasc/.js.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/.js.twig
@@ -14,6 +14,23 @@ $(function() {
 	{% include 'code-tables/js/events/input-code-change.js.twig' %}
 	{% include 'code-tables/js/events/input-code-force-focus.js.twig' %}
 
+	$("body").on("change", "#code-form input[name=whseid]", function(e) {
+		let input = $(this);
+		input.val(input.val().trim());
+		let descriptionField = input.closest('.input-parent').find('.name');
+
+		descriptionField.text('');
+
+		if (input.val() != '') {
+			server.getWarehouse(input.val(), function(warehouse) {
+				if (warehouse) {
+					descriptionField.text(warehouse.name);
+				}
+			});
+
+		}
+	});
+
 /* =============================================================
 	Lookup Modal Functions
 	ajax modal events is handled by scripts/code-tables/ajax-modal.js
@@ -34,6 +51,7 @@ $(function() {
 	Validation Functions
 ============================================================= */
 	var validator = formCode.form.validate({
+		onkeyup: false,
 		errorClass: "is-invalid",
 		validClass: "is-valid",
 		errorPlacement: function(error, element) {
