--- a/site/templates/twig/code-tables/mso/rgasc/form.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/form.twig
@@ -12,7 +12,7 @@
 		<input type="text" name="description" class="form-control form-control-sm " maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
-	<div class="form-group">
+	<div class="form-group input-parent">
 		<label for="whseid">Warehouse</label>
 		{% include 'util/bootstrap/form/input-group.twig' with {
 				'inputgroup': {
@@ -42,6 +42,7 @@
 				}
 			}
 		%}
+		<small class="text-muted name"></small>
 	</div>
 
 	<div class="form-group">
