RQST: update headers
Requested By: Bev

--- a/site/templates/twig/code-tables/mso/rgasc/list.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/list.twig
@@ -10,10 +10,10 @@
 				Description
 			</div>
 			<div class="col-sm-2">
-				Wh
+				Warehouse
 			</div>
 			<div class="col-sm-2">
-				Ship Acct
+				Shipping Account #
 			</div>
 			<div class="col-sm-2 text-center">
 				{% if page.is_print() == false %}
