--- a/site/templates/twig/code-tables/mpo/cnfm/.js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/.js.twig
@@ -45,7 +45,7 @@ $(function() {
 			code: "Please check the Code value (Max Length: {{ formCode.config.fields.code.maxlength }})",
 		},
 		submitHandler: function(form) {
-			var formCode = CnfmForm.getInstance();
+			var formCode = CodeForm.getInstance();
 			var server   = CnfmRequests.getInstance();
 			var code = formCode.inputs.code.val();
 
