--- a/site/templates/twig/code-tables/mar/crcd/list.twig
+++ b/site/templates/twig/code-tables/mar/crcd/list.twig
@@ -1,7 +1,7 @@
 {% extends 'code-tables/list.twig' %}
 
 {% block header_div %}
-	<div class="list-group-item py-0">
+	<div class="list-group-item py-0 px-2">
 		<div class="row align-items-center">
 			<div class="col-sm-6"></div>
 			<div class="col-sm-4 text-center bg-dark text-white">
@@ -10,7 +10,7 @@
 			<div class="col-sm-2"></div>
 		</div>
 	</div>
-	<div class="list-group-item bg-dark text-white">
+	<div class="list-group-item bg-dark text-white px-2">
 		<div class="row align-items-center">
 			<div class="col-sm-1">
 				Digit
