--- a/site/templates/twig/code-tables/mso/rgasc/list.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/list.twig
@@ -1,7 +1,7 @@
 {% extends 'code-tables/list.twig' %}
 
 {% block header_div %}
-	<div class="list-group-item bg-dark text-white">
+	<div class="list-group-item bg-dark text-white px-2">
 		<div class="row align-items-center">
 			<div class="col-sm-2">
 				Code
