--- a/site/templates/twig/code-tables/mso/mfcm/list.twig
+++ b/site/templates/twig/code-tables/mso/mfcm/list.twig
@@ -1,18 +1,18 @@
 {% extends 'code-tables/list.twig' %}
 
 {% block header_div %}
-	<div class="list-group-item bg-dark text-white">
-		<div class="row align-items-center">
-			<div class="col-sm-2">
+	<div class="list-group-item bg-dark text-white px-2">
+		<div class="form-row align-items-center">
+			<div class="col-sm-4">
 				Code
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-5">
 				Description
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-1">
 				Class
 			</div>
-			<div class="col-sm-3 text-center">
+			<div class="col-sm-2 text-center">
 				{% if page.is_print() == false %}
 					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
@@ -23,33 +23,32 @@
 	</div>
 {% endblock %}
 
-{% for code in codes %}
-	{% block code_row %}
-		<div class="row align-items-center">
-			<div class="col-sm-2 ">
-				{{ code.code|replace({' ': '&nbsp;'})|raw }}
-			</div>
-			<div class="col-sm-4 ">
-				{{ code.description }}
-			</div>
-			<div class="col-sm-3 ">
-				{{ code.class }}
-			</div>
-			<div class="col-sm-3 text-center">
-				{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
-					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
-						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-					</button>
-					&nbsp;
-					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
-						<i class="fa fa-trash" aria-hidden="true"></i> Delete
-					</a>
-				{% else %}
-					<span class="badge badge-secondary">
-						<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
-					</span>
-				{% endif %}
-			</div>
+
+{% block code_row %}
+	<div class="form-row align-items-center">
+		<div class="col-sm-4">
+			{{ code.code|replace({' ': '&nbsp;'})|raw }}
 		</div>
-	{% endblock %}
-{% endfor %}
+		<div class="col-sm-5">
+			{{ code.description }}
+		</div>
+		<div class="col-sm-1">
+			{{ code.class }}
+		</div>
+		<div class="col-sm-2 text-center">
+			{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
+				<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+					<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+				</button>
+				&nbsp;
+				<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+					<i class="fa fa-trash" aria-hidden="true"></i> Delete
+				</a>
+			{% else %}
+				<span class="badge badge-secondary">
+					<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
+				</span>
+			{% endif %}
+		</div>
+	</div>
+{% endblock %}
