--- a/site/templates/twig/msa/logm/user/form.twig
+++ b/site/templates/twig/msa/logm/user/form.twig
@@ -3,7 +3,7 @@
 		<div class="col-sm-3">
 			<label for="id">Login ID</label>
 		</div>
-		<div class="col-sm-9">
+		<div class="col-sm-2">
 			{% include 'util/bootstrap/form/input.twig' with {
 					'input': {
 						'name': 'id',
@@ -26,7 +26,7 @@
 		<div class="col-sm-3">
 			<label for="name">Login Name</label>
 		</div>
-		<div class="col-sm-9">
+		<div class="col-sm-4">
 			{% include 'util/bootstrap/form/input.twig' with {
 					'input': {
 						'name': 'name',
@@ -47,7 +47,7 @@
 		<div class="col-sm-3">
 			<label for="whseid">Warehouse ID</label>
 		</div>
-		<div class="col-sm-9">
+		<div class="col-sm-2">
 			{% include 'util/bootstrap/form/input-group.twig' with {
 					'inputgroup': {
 						'type': 'prepend',
@@ -81,8 +81,8 @@
 		<div class="col-sm-3">
 			<label for="companyid">Company ID</label>
 		</div>
-		<div class="col-sm-9">
-			<input type="text" name="companyid" id="companyid" class="form-control form-control-sm" value="{{ duser.companyid }}">
+		<div class="col-sm-1">
+			<input type="number" name="companyid" id="companyid" class="form-control form-control-sm text-right" value="{{ duser.companyid }}">
 		</div>
 	</div>
 
