--- a/site/templates/twig/code-tables/map/ptm/bread-crumbs.twig
+++ b/site/templates/twig/code-tables/map/ptm/bread-crumbs.twig
@@ -34,6 +34,6 @@
 	{% if values.offsetExists('code') == false %}
 		{{ page.get('pagetitle|headline|title')|raw }}
 	{% else %}
-		Customer Terms Edit
+		Vendor Terms Edit
 	{% endif %}
 {% endblock %}
