--- a/site/templates/twig/code-tables/map/ptm/list-print.twig
+++ b/site/templates/twig/code-tables/map/ptm/list-print.twig
@@ -10,7 +10,7 @@
 
 {% block print_headings_row %}
 	<tr>
-		<th colspan="12">
+		<th colspan="13">
 			<div class="w-100 d-flex justify-content-between">
 				<div>{{ 'now'|date('m/d/Y h:i A') }}</div>
 				<div>{{ page.headline }}</div>
@@ -27,6 +27,7 @@
 			<th colspan="4">Description</th>
 			<th>Method</th>
 			<th>Expire Date</th>
+			<th colspan="3">Description</th>
 		{% endblock %}
 	</tr>
 {% endblock %}
@@ -60,7 +61,7 @@
 			<td class="text-right">Day</td>
 			<td class="text-right">Plus Months</td>
 		</tr>
-		{% for x in 1..constant('NBR_SPLITS_METHOD_E', manager) %}
+		{% for x in 1..constant('NBR_SPLITS_METHOD_EOM', manager) %}
 			{% if code.eom_from_day(x) %}
 				<tr>
 					<td colspan="3"></td>
@@ -109,13 +110,13 @@
 			<td class="text-right">Plus Years</td>
 		</tr>
 
-		{% for x in 1..constant('NBR_SPLITS_METHOD_S', manager) %}
-			{% if code.order_percent(x) > 0 %}
+		{% for x in 1..constant('NBR_SPLITS_METHOD_STD', manager) %}
+			{% if code.std_order_percent(x) > 0 %}
 				<tr>
 					<td colspan="2"></td>
 					<td class="text-center">{{ x }}</td>
 					<td class="text-right">
-						{{ code.order_percent(x)|number_format(manager.fieldAttribute('order_percent', 'precision')) }}
+						{{ code.std_order_percent(x)|number_format(manager.fieldAttribute('std_order_percent', 'precision')) }}
 					</td>
 					<td class="border-left text-right">
 						{{ code.std_disc_percent(x) > 0 ? code.std_disc_percent(x)|number_format(manager.fieldAttribute('std_disc_percent', 'precision')) : '' }}
