--- a/site/templates/twig/items/ii/sales-history/sales-history.twig
+++ b/site/templates/twig/items/ii/sales-history/sales-history.twig
@@ -12,7 +12,7 @@
 				</button>
 			</div>
 		</div>
-		<div class="collapse" id="{{ id|attrJS }}">
+		<div class="collapse show" id="{{ id|attrJS }}">
 			<table class="table table-striped table-sm">
 				<thead>
 					{% for x in 0..blueprint['detail']['rowcount']  %}
