--- a/site/templates/twig/customers/ci/.new/pricing/select-item/form.twig
+++ b/site/templates/twig/customers/ci/.new/pricing/select-item/form.twig
@@ -1,5 +1,7 @@
+{% set idCust = config.ci.useRid ? input.get.int('rid') : input.get.string('custID') %}
+
 <form action="{{ input.url() }}" method="GET" id="pricing-itemid-form">
-	<input type="hidden" name="rid" value="{{ input.get.int('rid') }}">
+	<input type="hidden" name="{{ config.ci.useRid ? 'rid' : 'custID' }}" value="{{ idCust }}">
 
 	<div class="form-group">
 		<label for="itemID">Item ID</label>
