--- a/site/templates/twig/items/ii/costing/item-info.twig
+++ b/site/templates/twig/items/ii/costing/item-info.twig
@@ -2,7 +2,8 @@
 	<table class="table table-striped table-sm">
 		<tr>
 			<th>Item ID</th>
-			<th>Sales UoM</th>
+			<th>Sale UoM</th>
+			<th>Purchase UoM</th>
 			<th class="text-right">Stan Cost</th>
 			<th class="text-right">Avg Cost</th>
 			<th class="text-right">Last Cost</th>
@@ -14,6 +15,7 @@
 				<small>{{ json['desc2'] }}</small>
 			</td>
 			<td>{{ json['sale uom'] }}</td>
+			<td>{{ json['purch uom'] }}</td>
 			<td class="text-right">{{ json['stan cost'] }}</td>
 			<td class="text-right">{{ json['avg cost'] }}</td>
 			<td class="text-right">{{ json['last cost'] }}</td>
