--- a/site/templates/twig/cart/lookup/js/classes/Form.js.twig
+++ b/site/templates/twig/cart/lookup/js/classes/Form.js.twig
@@ -44,6 +44,7 @@ class LookupForm {
 			} else if (response.matches.itm > 0) {
 				form.searchItemsAjax();
 			} else {
+				var alertsLookup = LookupAlerts.getInstance();
 				alertsLookup.itemNotFound(inputs.itemid.val(), function(makeAdvancedSearch) {
 					if (makeAdvancedSearch) {
 						var url = URI();
