--- a/site/templates/twig/customers/ci/.new/open-invoices/open-invoices.twig
+++ b/site/templates/twig/customers/ci/.new/open-invoices/open-invoices.twig
@@ -19,7 +19,8 @@
 
 									{% if i == 1 and invoice['Invoice Number'] %}
 										{% if docm.countDocuments(invoice['Invoice Number']) %}
-											<a href="{{ page.documentListUrl(input.get.int('rid'), invoice['Invoice Number'])}}" class="text-success" title="View Documents for Invoice # {{ invoice['Invoice Number'] }}">
+											{% set custID = json['custid'] %}
+											<a href="{{ page.documentListUrl(custID, invoice['Invoice Number'])}}" class="text-success" title="View Documents for Invoice # {{ invoice['Invoice Number'] }}">
 												<i class="fa fa-file-text" aria-hidden="true"></i> <span class="sr-only">View Documents for Invoice # {{ invoice['Invoice Number'] }}</span>
 											</a>
 										{% endif %}
