--- a/site/templates/twig/customers/ci/.new/sales-history/sales-history.twig
+++ b/site/templates/twig/customers/ci/.new/sales-history/sales-history.twig
@@ -33,8 +33,10 @@
 										<span class="font-weight-bold">{{ column['label'] }}</span> {{ formatter.format_celldata(invoice, column) }}
 										{% if column['id'] == 'Invoice Number' %}
 											{% set ordn = invoice['Ordn'] %}
+											{% set custID = json['custid'] %}
+											
 											{% if docm.countDocuments(ordn) %}
-												<a href="{{ page.documentListUrl(input.get.int('rid'), ordn)}}" class="text-success" title="View Documents for Invoice # {{ invoice['Invoice Number'] }}">
+												<a href="{{ page.documentListUrl(custID, ordn)}}" class="text-success" title="View Documents for Invoice # {{ invoice['Invoice Number'] }}">
 													<i class="fa fa-file-text" aria-hidden="true"></i> <span class="sr-only">View Documents for Invoice # {{ invoice['Invoice Number'] }}</span>
 												</a>
 											{% endif %}
