RQST: focus on top half errors
REquested By: bev

--- a/site/templates/twig/code-tables/mar/trm/edit/form.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form.twig
@@ -1,7 +1,7 @@
 <form action="{{ input.url() }}" method="POST" id="code-form" data-code="{{ code.code }}">
 	<input type="hidden" name="action" value="update">
 
-	<div class="mb-3">
+	<div class="mb-3" id="top-inputs">
 		{% include 'code-tables/mar/trm/edit/form/top.twig' %}
 	</div>
 
