FIX: disable unchecked lots

--- a/site/templates/twig/warehouse/picking/unguided/scan/scanned/select-multiple-list.twig
+++ b/site/templates/twig/warehouse/picking/unguided/scan/scanned/select-multiple-list.twig
@@ -51,31 +51,34 @@
 					<div class="col-sm-2">Qty</div>
 				</div>
 			</div>
-			<form action="{{ page.fullURL.getUrl() }}" method="post">
+			<form action="{{ page.fullURL.getUrl() }}" method="post" id="add-lotserials-form">
 				<input type="hidden" name="action" value="add-lotserials">
 				<input type="hidden" name="scan" value="{{ item.scan }}">
 				<input type="hidden" name="itemID" value="{{ item.itemid }}">
+
 				<div class="scroll-300 form-group">
 					{% for lotserial in item.get_lotserials() %}
-						<input type="hidden" name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-bin" value="{{ lotserial.bin }}">
-						<input type="hidden" name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-lotserialref" value="{{ lotserial.lotserialref }}">
-						<input type="hidden" name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-lotserial" value="{{ lotserial.lotserial }}">
+						<div class="lotserial-record">
+							<input type="hidden" name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-bin" value="{{ lotserial.bin }}">
+							<input type="hidden" name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-lotserialref" value="{{ lotserial.lotserialref }}">
+							<input type="hidden" name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-lotserial" value="{{ lotserial.lotserial }}">
 
-						<div class="list-group-item lotserial-bin-record">
-							<div class="row">
-								<div class="col-sm-2">
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" name="lotserialbins[]" value="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}" id="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin)|attrJS }}">
+							<div class="list-group-item lotserial-bin-record">
+								<div class="row">
+									<div class="col-sm-2">
+										<div class="form-check">
+											<input class="form-check-input" type="checkbox" name="lotserialbins[]" value="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}" id="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin)|attrJS }}">
+										</div>
 									</div>
-								</div>
-								<div class="col-sm-2">{{ lotserial.bin }}</div>
-								<div class="col-sm-2" for="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin)|attrJS }}">{{ lotserial.lotserial }}</div>
-								<div class="col-sm-2">{{ lotserial.lotserialref }}</div>
-								<div class="col-sm-2">
-									<input type="number" class="form-control lotserial-qty" {% if m_picking.allowOverPick() == false  %} max="{{ lotserial.qty|number_format(m_picking.getDecimalPlacesQty()) }}" {% endif %} name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-qty" value="">
-								</div>
-								<div class="col-sm-2">
-									<small class="form-text text-muted">Bin Qty: {{ lotserial.qty|number_format(m_picking.getDecimalPlacesQty()) }}</small>
+									<div class="col-sm-2">{{ lotserial.bin }}</div>
+									<div class="col-sm-2" for="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin)|attrJS }}">{{ lotserial.lotserial }}</div>
+									<div class="col-sm-2">{{ lotserial.lotserialref }}</div>
+									<div class="col-sm-2">
+										<input type="number" class="form-control lotserial-qty" {% if m_picking.allowOverPick() == false  %} max="{{ lotserial.qty|number_format(m_picking.getDecimalPlacesQty()) }}" {% endif %} name="{{ (lotserial.lotserial ~ '-' ~ lotserial.bin) }}-qty" value="">
+									</div>
+									<div class="col-sm-2">
+										<small class="form-text text-muted">Bin Qty: {{ lotserial.qty|number_format(m_picking.getDecimalPlacesQty()) }}</small>
+									</div>
 								</div>
 							</div>
 						</div>
