--- a/site/templates/twig/code-tables/mso/rgarc/.js.twig
+++ b/site/templates/twig/code-tables/mso/rgarc/.js.twig
@@ -42,7 +42,7 @@ $(function() {
 			}
 		},
 		submitHandler: function(form) {
-			var formCode = RgarcForm.getInstance();
+			var formCode = CodeForm.getInstance();
 			var server   = RgarcRequests.getInstance();
 			var code = formCode.inputs.code.val();
 
