--- a/site/templates/twig/code-tables/mpr/src/.js.twig
+++ b/site/templates/twig/code-tables/mpr/src/.js.twig
@@ -42,7 +42,7 @@ $(function() {
 			}
 		},
 		submitHandler: function(form) {
-			var formCode = SrcForm.getInstance();
+			var formCode = CodeForm.getInstance();
 			var server   = SrcRequests.getInstance();
 			var code = formCode.inputs.code.val();
 
