--- a/site/templates/twig/code-tables/optm/list/page.twig
+++ b/site/templates/twig/code-tables/optm/list/page.twig
@@ -20,7 +20,7 @@
 	<div class="d-flex justify-content-between mb-3">
 		<div>{{ 'now'|date('m/d/Y h:i A') }}</div>
 		<div>{{ page.headline }}</div>
-		<div>Page {{ input.pageNum }}</div>
+		<div></div>
 	</div>
 {% endif %}
 
