--- a/site/templates/twig/code-tables/optm/sysop/display.twig
+++ b/site/templates/twig/code-tables/optm/sysop/display.twig
@@ -26,7 +26,7 @@
 	<div class="d-flex justify-content-between mb-3">
 		<div>{{ 'now'|date('m/d/Y h:i A') }}</div>
 		<div>{{ page.headline }}</div>
-		<div>Page {{ input.pageNum }}</div>
+		<div></div>
 	</div>
 {% endif %}
 
