FIX: add .delete_button class for delete alert trigger

--- a/site/templates/twig/items/cxm/.new/xref/qnotes/modal.twig
+++ b/site/templates/twig/items/cxm/.new/xref/qnotes/modal.twig
@@ -51,7 +51,7 @@
 							<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 						</button>
 						{# TODO: add confirmation for deletion 'delete_button' #}
-						<button type="submit" name="action" value="delete-notes" class="btn btn-danger">
+						<button type="submit" name="action" value="delete-notes" class="btn btn-danger delete_button">
 							<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
 						</button>
 						<button type="button" class="btn btn-warning pull-right" data-dismiss="modal">
