FIX: omit code on the edit code title

--- a/site/templates/twig/msa/noce/js/classes/Form.js.twig
+++ b/site/templates/twig/msa/noce/js/classes/Form.js.twig
@@ -29,7 +29,7 @@ class NoceForm {
 	setupFormEdit(id) {
 		var modal  = this.form.closest('.modal');
 		var inputs = this.inputs;
-		modal.find('.modal-title').text('Edit Note ' + id);
+		modal.find('.modal-title').text('Edit Note');
 		this.updateFormFromId(id);
 	}
 
