FIX: require from group for forms

--- a/site/templates/twig/items/cxm/.new/xref/qnotes/.js.twig
+++ b/site/templates/twig/items/cxm/.new/xref/qnotes/.js.twig
@@ -36,16 +36,37 @@ $(function() {
 		}
 	});
 
-	$("#order-notes-form").validate({
+	$("#qnotes-form").validate({
 		errorClass: "is-invalid",
-		validClass: "is-valid",
+		validClass: "",
 		ignore: ".validate-ignore",
 		errorPlacement: function(error, element) {
-			error.insertAfter(element).addClass('invalid-feedback');
+			error.addClass('invalid-feedback');
+
+			if (element.closest('.input-parent').length == 0 && element.closest('.input-group-parent').length == 0) {
+				error.insertAfter(element);
+				return true;
+			}
+			error.appendTo(element.closest('.input-parent'));
 		},
 		rules: {
 			note: {
 				required: true,
+			},
+			quote: {
+				require_from_group: [1, ".order-form"]
+			},
+			pick: {
+				require_from_group: [1, ".order-form"]
+			},
+			pack: {
+				require_from_group: [1, ".order-form"]
+			},
+			invoice: {
+				require_from_group: [1, ".order-form"]
+			},
+			acknowledgement: {
+				require_from_group: [1, ".order-form"]
 			},
 		},
 		messages: {
@@ -61,16 +82,8 @@ $(function() {
 			}
 
 			if (action == 'delete-notes') {
-				
-				alert.delete(function(confirmDelete) {
-					if (confirmDelete) {
-						$('<input type="hidden" name="action" value="delete-notes">').appendTo(jform);
-						form.submit();
-					}
-					if (modal.length) {
-						modal.attr('tabindex', '-1');
-					}
-				});
+				// $('<input type="hidden" name="action" value="delete-notes">').appendTo(jform);
+				form.submit();
 			} else {
 				if (qnotesForm.hasDocumentSelected()) {
 					console.log(qnotesForm.getNoteFormscode());
