--- a/site/templates/twig/msa/noce/js/classes/Alerts.js.twig
+++ b/site/templates/twig/msa/noce/js/classes/Alerts.js.twig
@@ -8,7 +8,7 @@ class NoceAlerts extends Alerts {
 		return this.instance;
 	}
 
-	notesExist(code, callback) {
+	noteExists(code, callback) {
 		swal2.fire({
 			title: 'Notes Exist',
 			text: 'Edit Note ' + code + '?',
