--- a/site/templates/twig/msa/noce/.js.twig
+++ b/site/templates/twig/msa/noce/.js.twig
@@ -12,19 +12,28 @@ $(function() {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal  = $(this);
 		var id     = button.data('code');
+		var json   = button.data('json');
 
 		formNote.setupFormAdd();
 
-		if (id) {
-			formNote.setupFormEdit(id);
+		if (json) {
+			formNote.updateFormFromJson(json);
+
+			server.lockCode(json.code, function(hasLocked) {
+				if (hasLocked === false) {
+					alert.recordIsLocked(function() {
+						formNote.serializeForm(false);
+						formNote.setupFormAdd();
+						formNote.inputs.fields.code.focus();
+					});
+				}
+			});
 		}
 	});
 
 	$('#notes-modal').on('shown.bs.modal', function (event) {
 		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal  = $(this);
-		var form   = modal.find('form');
-		var id   = button.data('code');
+		var id     = button.data('code');
 
 		formNote.inputs.code.focus();
 
@@ -60,36 +69,58 @@ $(function() {
 		var form = modal.find('form');
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var id     = modal.find('input[name=code]').val().toString();
-		if (form.attr('data-code')) {
-		if ($('.note[data-code="'+form.attr('data-code')+'"]').length == 0) {
-				var url = URI();
-				url.setQuery('action', 'focus');
-				url.setQuery('code', form.attr('data-code'));
-				window.location.href = url.toString();
-			}
+
+		var validator = form.validate();
+
+		if (validator) {
+			validator.resetForm();
 		}
 
 		$('.bg-success').removeClass('bg-success text-white');
 		$('.highlight').removeClass('highlight');
 		$('.note[data-code="'+id+'"]').addClass('highlight');
 		$('.code-table-alert').remove();
+
+
+		if (form.attr('data-code')) {
+			if ($('.note[data-code="'+form.attr('data-code')+'"]').length == 0) {
+				var url = URI();
+				url.setQuery('action', 'focus');
+				url.setQuery('code', form.attr('data-code'));
+				window.location.href = url.toString();
+			}
+
+			server.unlockCode(form.attr('data-code'), function(isUnlocked) {});
+		}
 	});
 
 	$("body").on("change", "input[name=code]", function(e) {
 		var input = $(this);
 		var id = input.val();
 
-		server.validateId(id, function(exists) {
-			if (exists === true) {
-				alert.notesExist(id, function(editNote) {
-					var modal = input.closest('.modal');
+		server.getNote(id, function(json) {
+			if (json) {
+				alert.noteExists(id, function(editCode) {
+					if (editCode) {
+						formNote.updateFormFromJson(json);
 
-					if (editNote) {
-						formNote.setupFormEdit(id);
-					} else {
-						formNote.setupFormAdd();
-						formNote.form.validate().resetForm();
-						formNote.inputs.code.focus();
+						server.lockCode(id, function(hasLocked) {
+							if (hasLocked === false) {
+								alert.recordIsLocked(function() {
+									formNote.serializeForm(false);
+									formNote.setupFormAdd();
+									formNote.inputs.fields.code.focus();
+								});
+							}
+						});
+						return true;
+					}
+					formNote.serializeForm(false);
+					formNote.setupFormAdd();
+					var validator = formNote.form.validate();
+
+					if (validator) {
+						validator.resetForm();
 					}
 				});
 			}
@@ -97,7 +128,8 @@ $(function() {
 	});
 
 	$("body").on("focusin", "#notes-form input:not(input[name=code]), textarea:not(input[name=code])", function(e) {
-		if (formNote.inputs.code.val() == '') {
+		if (formNote.inputs.code.val().trim() == '') {
+			formNote.inputs.code.val(formNote.inputs.code.val().trim());
 			formNote.inputs.code.focus();
 		}
 	});
@@ -106,8 +138,9 @@ $(function() {
 	Validation Functions
 ============================================================= */
 	var validator = formNote.form.validate({
+		onkeyup: false,
 		errorClass: "is-invalid",
-		validClass: "is-valid",
+		validClass: "",
 		errorPlacement: function(error, element) {
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
