--- a/site/templates/twig/msa/noce/list/list.twig
+++ b/site/templates/twig/msa/noce/list/list.twig
@@ -18,7 +18,7 @@
 			</div>
 			<div class="col-sm-4 text-center">
 				{% if page.is_print() == false %}
-					<button type="button" class="btn btn-sm btn-light" data-toggle="modal" data-target="#notes-modal" data-code="" data-description="">
+					<button type="button" class="btn btn-sm btn-light" data-toggle="modal" data-target="#notes-modal" data-code="" data-json="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Note
 					</button>
 				{% endif %}
@@ -35,18 +35,22 @@
 					<span class="summary" data-code="{{ note.id }}">{{ note.note }}</span>
 				</div>
 				<div class="col-sm-4 text-center">
-					{% if page.is_print() == false %}
-						<button type="button" class="btn btn-sm btn-light" data-toggle="collapse" data-target="#notes-{{ note.id|attrJS }}" aria-controls="#notes-{{ note.id|attrJS }}">
-							<i class="fa fa-eye" aria-hidden="true"></i> Show
-						</button>
-						&nbsp;
-						<button type="button" class="btn btn-sm btn-warning" data-toggle="modal" data-target="#notes-modal" data-code="{{ note.id }}" data-description="{{ note.description }}">
+					<button type="button" class="btn btn-sm btn-light" data-toggle="collapse" data-target="#notes-{{ note.id|attrJS }}" aria-controls="#notes-{{ note.id|attrJS }}">
+						<i class="fa fa-eye" aria-hidden="true"></i> Show
+					</button>
+					&nbsp;
+					{% if qnotes.recordlocker.isLocked(note.id) == false or qnotes.recordlocker.isLockedByUser(note.id) %}
+						<button type="button" class="btn btn-sm btn-warning" data-toggle="modal" data-target="#notes-modal" data-code="{{ note.id }}" data-json="{{ qnotes.json(note)|json_encode }}">
 							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 						</button>
 						&nbsp;
 						<a href="{{ page.notesDeleteUrl(note.id) }}" class="btn btn-sm btn-danger delete_button" data-deleting="Pre-Defined Note" data-delete="{{ note.id }}">
 							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
+					{% else %}
+						<span class="badge badge-secondary">
+							<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ qnotes.recordlocker.getLockingUser(note.id) }}
+						</span>
 					{% endif %}
 				</div>
 			</div>
