--- a/site/templates/twig/warehouse/binr/inv-results/item.twig
+++ b/site/templates/twig/warehouse/binr/inv-results/item.twig
@@ -17,7 +17,7 @@
 {% block list %}
 	<div class="collapse-lotserial {{ not page.is_print() ? 'collapse' : '' }}" id="{{ item.itemid|attrJS  }}-lotserial">
 		<div class="list-group list-group-flush">
-			{% for lotserial in inventory.get_lotserials_itemid(item.itemid, page.frombin) %}
+			{% for lotserial in inventory.get_lotserials_itemid(item.itemid, input.get.string('frombin')) %}
 				{% include 'warehouse/binr/inv-results/item-lotserial.twig' %}
 			{% endfor %}
 		</div>
