--- a/site/templates/twig/items/upcx/form/page.twig
+++ b/site/templates/twig/items/upcx/form/page.twig
@@ -1,5 +1,7 @@
-{% if session.getFor('response', 'upcx') %}
-	{% include 'items/itm/response-alert.twig' with {'response': session.getFor('response', 'upcx')} %}
+{% set response = session.getFor('response', 'upcx') %}
+
+{% if response and response.has_success() == false %}
+	{% include 'items/itm/response-alert.twig' with {'response': response} %}
 {% endif %}
 
 {% block return_links %}
